--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,5 +7,13 @@
 
     <style name="Theme.SamadNursingHome" parent="Base.Theme.SamadNursingHome" />
 
+    <!-- Splash Screen Theme -->
+    <style name="SplashTheme" parent="Theme.SamadNursingHome">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowBackground">@drawable/splash_background</item>
+    </style>
 
 </resources>
