--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,16 +1,52 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+    <!-- Dark Theme -->
     <style name="Base.Theme.SamadNursingHome" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <!-- Primary Colors -->
+        <item name="colorPrimary">@color/primary_teal_light</item>
+        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimaryContainer">@color/primary_teal_dark</item>
+        <item name="colorOnPrimaryContainer">@color/white</item>
+        
+        <!-- Secondary Colors -->
+        <item name="colorSecondary">@color/secondary_blue_light</item>
+        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondaryContainer">@color/secondary_blue_dark</item>
+        <item name="colorOnSecondaryContainer">@color/white</item>
+        
+        <!-- Background Colors -->
+        <item name="android:colorBackground">@color/background_dark</item>
+        <item name="colorSurface">@color/surface_dark</item>
+        <item name="colorOnSurface">@color/text_primary_dark</item>
+        <item name="colorSurfaceVariant">@color/surface_variant_dark</item>
+        <item name="colorOnSurfaceVariant">@color/text_secondary_dark</item>
+        
+        <!-- Status Bar -->
+        <item name="android:statusBarColor">@color/background_dark</item>
+        <item name="android:windowLightStatusBar">false</item>
+        
+        <!-- Navigation Bar -->
+        <item name="android:navigationBarColor">@color/surface_dark</item>
+        <item name="android:windowLightNavigationBar">false</item>
+        
+        <!-- Text Colors -->
+        <item name="android:textColorPrimary">@color/text_primary_dark</item>
+        <item name="android:textColorSecondary">@color/text_secondary_dark</item>
+        <item name="android:textColorTertiary">@color/text_tertiary_dark</item>
+        
+        <!-- Error Colors -->
+        <item name="colorError">@color/medical_red</item>
+        <item name="colorOnError">@color/white</item>
+        
+        <!-- Outline Colors -->
+        <item name="colorOutline">@color/divider_dark</item>
+        <item name="colorOutlineVariant">@color/glass_border_dark</item>
     </style>
     
-    <!-- Splash Screen Theme for Dark Mode -->
-    <style name="SplashTheme" parent="Base.Theme.SamadNursingHome">
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:windowActionBar">false</item>
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowBackground">@drawable/splash_background</item>
+    <!-- Glassmorphism Card Style for Dark Theme -->
+    <style name="Widget.SamadNursingHome.Card.Glass" parent="Widget.SamadNursingHome.Card">
+        <item name="cardBackgroundColor">@color/glass_dark</item>
+        <item name="cardElevation">12dp</item>
+        <item name="strokeColor">@color/glass_border_dark</item>
+        <item name="strokeWidth">1dp</item>
     </style>
 </resources>
